--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta title="{{ title }}">
   <meta charset="UTF-8">
   <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
@@ -9,6 +10,29 @@
   <link rel="stylesheet" href="../../static/css/style.css">
 </head>
 <body>
-  {% block content %}{% endblock %}
+
+<header class="p-3 text-bg-dark">
+  <div class="container">
+    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+      <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+        <img src="static/images/favicon.svg" width="50" alt="На главную">
+      </a>
+
+      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+        <li><a href="/" class="nav-link px-2 text-secondary">Заметки</a></li>
+        <li><a href="#" class="nav-link px-2 text-dark">Страница 1</a></li>
+      </ul>
+      {% if current_user.is_authenticated %}
+      <a class="navbar-brand" href="/logout">{{ current_user.surname }} {{ current_user.name }}</a>
+      {% else %}
+      <div class="text-end">
+        <a href="/login"><button type="button" class="btn btn-light me-2">Войти</button></a>
+        <a href="/register"><button type="button" class="btn btn-warning">Зарегистрироваться</button></a>
+      </div>
+      {% endif %}
+    </div>
+  </div>
+</header>
+{% block content %}{% endblock %}
 </body>
 </html>
