--- a/templates/create_note.html
+++ b/templates/create_note.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h1 align="center">Регистрация</h1>
+<h1 align="center">Новая заметка</h1>
 <div class="row mb-2">
   <div class="col-md-6">
     <form action="" method="post" enctype="multipart/form-data">
