--- a/templates/base.html
+++ b/templates/base.html
@@ -23,8 +23,17 @@
 
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
         <li><a href="/" class="nav-link px-2 text-secondary">Заметки</a></li>
-        <li><a href="#" class="nav-link px-2 text-dark">Страница 1</a></li>
       </ul>
+      {% if current_user.is_authenticated %}
+      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+        <li><a href="/create_note" class="nav-link px-2 text-dark">
+          <button type="button" class="btn btn-success me-2">Новая заметка</button>
+        </a></li>
+        <li><a href="/profile/{{ current_user.id }}" class="nav-link px-2 text-dark">
+          <button type="button" class="btn btn-primary">Редактировать профиль</button>
+        </a></li>
+      </ul>
+      {% endif %}
       {% if current_user.is_authenticated %}
       <a class="navbar-brand" href="/logout">{{ current_user.surname }} {{ current_user.name }}</a>
       {% else %}
