--- a/templates/notes.html
+++ b/templates/notes.html
@@ -20,12 +20,12 @@
               <div class=" btn-group">
                 <a href="/">
                   <button type="button" class="btn btn-sm btn-outline-secondary"
-                          style="border-radius: calc(0.25rem - 1px) 0 0 calc(0.25rem - 1px)">Читать
+                          style="border-radius: calc(0.25rem - 1px) 0 0 calc(0.25rem - 1px)">Смотреть
                   </button>
                 </a>
-                <a href="/edit_note/{{ note.id }}/{{ current_user.id }}">
+                <a href="/delete_note/{{ note.id }}/{{ current_user.id }}">
                   <button type="button" class="btn btn-sm btn-outline-secondary"
-                          style="border-radius: 0">Изменить
+                          style="border-radius: 0">Удалить
                   </button>
                 </a>
                 <a href="/hide_note/{{ note.id }}/{{ current_user.id }}">
