--- a/templates/notes.html
+++ b/templates/notes.html
@@ -18,7 +18,7 @@
             <p class="card-text">{{ note.text[:128] }}{% if note.text|length > 128 %}...{% endif %}</p>
             <div class="d-flex justify-content-between align-items-center">
               <div class=" btn-group">
-                <a href="/">
+                <a href="/note/{{ note.id }}/{{ current_user.id }}">
                   <button type="button" class="btn btn-sm btn-outline-secondary"
                           style="border-radius: calc(0.25rem - 1px) 0 0 calc(0.25rem - 1px)">Смотреть
                   </button>
