--- a/templates/create_note.html
+++ b/templates/create_note.html
@@ -3,7 +3,8 @@
 {% block content %}
 
 <h1 align="center">Новая заметка</h1>
-<div class="row mb-2">
+<div class="row mb-2" align="center">
+  <div class="col-md-3"></div>
   <div class="col-md-6">
     <form action="" method="post" enctype="multipart/form-data">
       {{ form.hidden_tag() }}
