--- a/templates/login.html
+++ b/templates/login.html
@@ -2,28 +2,33 @@
 
 {% block content %}
 <h1 align="center">Авторизация</h1>
-<form action="" method="post">
-  {{ form.hidden_tag() }}
-  <p>
-    {{ form.nick.label }}<br>
-    {{ form.nick(class="form-control") }}<br>
-    {% for error in form.nick.errors %}
-  <div class="alert alert-danger" role="alert">
-    {{ error }}
+<div class="row mb-2" align="center">
+  <div class="col-md-3"></div>
+  <div class="col-md-6">
+    <form action="" method="post">
+      {{ form.hidden_tag() }}
+      <p>
+        {{ form.nick.label }}<br>
+        {{ form.nick(class="form-control") }}<br>
+        {% for error in form.nick.errors %}
+      <div class="alert alert-danger" role="alert">
+        {{ error }}
+      </div>
+      {% endfor %}
+      </p>
+      <p>
+        {{ form.password.label }}<br>
+        {{ form.password(class="form-control", type="password") }}<br>
+        {% for error in form.password.errors %}
+      <div class="alert alert-danger" role="alert">
+        {{ error }}
+      </div>
+      {% endfor %}
+      </p>
+      <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
+      <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
+      <div>{{ message }}</div>
+    </form>
   </div>
-  {% endfor %}
-  </p>
-  <p>
-    {{ form.password.label }}<br>
-    {{ form.password(class="form-control", type="password") }}<br>
-    {% for error in form.password.errors %}
-  <div class="alert alert-danger" role="alert">
-    {{ error }}
-  </div>
-  {% endfor %}
-  </p>
-  <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
-  <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
-  <div>{{ message }}</div>
-</form>
+</div>
 {% endblock %}
