--- a/templates/register.html
+++ b/templates/register.html
@@ -2,54 +2,59 @@
 
 {% block content %}
 <h1 align="center">Регистрация</h1>
-<form action="" method="post">
-    {{ form.hidden_tag() }}
-    <p>
+<div class="row mb-2" align="center">
+  <div class="col-md-3"></div>
+  <div class="col-md-6">
+    <form action="" method="post">
+      {{ form.hidden_tag() }}
+      <p>
         {{ form.nick.label }}<br>
         {{ form.nick(class="form-control") }}<br>
         {% for error in form.nick.errors %}
-            <p class="alert alert-danger" role="alert">
-                {{ error }}
-            </p>
-        {% endfor %}
-    </p>
-    <p>
+      <p class="alert alert-danger" role="alert">
+        {{ error }}
+      </p>
+      {% endfor %}
+      </p>
+      <p>
         {{ form.password.label }}<br>
         {{ form.password(class="form-control", type="password") }}<br>
         {% for error in form.password.errors %}
-            <p class="alert alert-danger" role="alert">
-                {{ error }}
-            </p>
-        {% endfor %}
-    </p>
-    <p>
+      <p class="alert alert-danger" role="alert">
+        {{ error }}
+      </p>
+      {% endfor %}
+      </p>
+      <p>
         {{ form.password_again.label }}<br>
         {{ form.password_again(class="form-control", type="password") }}<br>
         {% for error in form.password_again.errors %}
-            <p class="alert alert-danger" role="alert">
-                {{ error }}
-            </p>
-        {% endfor %}
-    </p>
-    <p>
+      <p class="alert alert-danger" role="alert">
+        {{ error }}
+      </p>
+      {% endfor %}
+      </p>
+      <p>
         {{ form.name.label }}<br>
         {{ form.name(class="form-control") }}<br>
         {% for error in form.name.errors %}
-            <p class="alert alert-danger" role="alert">
-                {{ error }}
-            </p>
-        {% endfor %}
-    </p>
-    <p>
+      <p class="alert alert-danger" role="alert">
+        {{ error }}
+      </p>
+      {% endfor %}
+      </p>
+      <p>
         {{ form.surname.label }}<br>
         {{ form.surname(class="form-control") }}<br>
         {% for error in form.surname.errors %}
-            <p class="alert alert-danger" role="alert">
-                {{ error }}
-            </p>
-        {% endfor %}
-    </p>
-    <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
-    {{message}}
-</form>
+      <p class="alert alert-danger" role="alert">
+        {{ error }}
+      </p>
+      {% endfor %}
+      </p>
+      <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
+      {{message}}
+    </form>
+  </div>
+</div>
 {% endblock %}
