--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <h1 align="center">Редактировать профиль</h1>
+<h3 align="center">Ваш ник: {{ nick }}</h3>
 <div class="row mb-2" align="center">
   <div class="col-md-3"></div>
   <div class="col-md-6">
